; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kern_cdata.c_kcdata_get_memory_addr.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kern_cdata.c_kcdata_get_memory_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KCDATA_FLAGS_STRUCT_PADDING_MASK = common dso_local global i32 0, align 4
@KCDATA_FLAGS_STRUCT_HAS_PADDING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kcdata_get_memory_addr(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load i32, i32* @KCDATA_FLAGS_STRUCT_PADDING_MASK, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @kcdata_calc_padding(i32 %11)
  %13 = and i32 %10, %12
  %14 = load i32, i32* @KCDATA_FLAGS_STRUCT_HAS_PADDING, align 4
  %15 = or i32 %13, %14
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %8, align 8
  %21 = call i32 @kcdata_get_memory_addr_with_flavor(i32 %16, i32 %17, i32 %18, i32 %19, i32* %20)
  ret i32 %21
}

declare dso_local i32 @kcdata_calc_padding(i32) #1

declare dso_local i32 @kcdata_get_memory_addr_with_flavor(i32, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
